# live-system-book

./: GLOSSARY.md  IMPROVEMENT_PLAN.md  OUTLINE.md  README.md  appendix-a-cpp11-thread.md  book.toml  build-ebook.sh  build-www.sh  build_www.py  custom.css  test.html
.github/workflows/: pages.yml
chapter-01/: CMakeLists.txt  README.md
chapter-01/include/common/: error.hpp
chapter-01/src/: decoder.cpp  decoder.h  demuxer.cpp  demuxer.h  main.cpp  renderer.cpp  renderer.h  simple_player.cpp
chapter-01/src/core/: decoder.cpp  decoder.h  demuxer.cpp  demuxer.h  renderer.cpp  renderer.h
chapter-02/: CMakeLists.txt  README.md
chapter-02/src/: decoder_thread.cpp  frame_queue.cpp  simple_player.cpp
chapter-03/: CMakeLists.txt  README.md
chapter-03/include/live/: idecoder.h  idemuxer.h  irenderer.h  raii_utils.h
chapter-03/src/: ffmpeg_decoder.cpp  ffmpeg_demuxer.cpp  main.cpp  ring_buffer.cpp  sdl_renderer.cpp
chapter-04/: BUILD.md  CMakeLists.txt  README.md  README.md.template.footer  README.md.template.header  lag_experiment.cpp  profiler_player.cpp
chapter-04/src/: artificial_lag_demo.cpp  rtmp_connection.cpp  simple_rtmp_player.cpp  timing_demo.cpp
chapter-05/: CMakeLists.txt  README.md
chapter-05/include/live/: threadsafe_queue.h
chapter-05/src/: 01_thread_basics.cpp  02_mutex_demo.cpp  03_deadlock_demo.cpp  04_condition_variable.cpp  05_atomic_demo.cpp  06_threadsafe_queue.cpp  07_producer_consumer.cpp  video_capture_demo.cpp
chapter-06/: CMakeLists.txt  README.md
chapter-06/include/live/: frame_queue.h
chapter-06/src/: decoder_thread.h  simple_streamer.cpp
chapter-07/: CMakeLists.txt  README.md
chapter-07/include/live/: download_thread.h  ring_buffer.h
chapter-07/src/: download_thread.cpp  hw_decode_player.cpp  main.cpp
chapter-08/: README.md
chapter-08/src/: 07_producer_consumer.cpp  flv_parser.cpp
chapter-09/: README.md
chapter-09/chapter-03/: CMakeLists.txt  README.md
chapter-09/chapter-03/include/live/: ffmpeg_decoder.h  ffmpeg_demuxer.h  idecoder.h  idemuxer.h  ipipeline.h  irenderer.h  player_pipeline.h  sdl_renderer.h
chapter-09/chapter-03/src/: ffmpeg_decoder.cpp  ffmpeg_demuxer.cpp  main.cpp  player_pipeline.cpp  sdl_renderer.cpp
chapter-09/src/: decode_bench.cpp
chapter-10/: CMakeLists.txt  README.md
chapter-10/src/: audio_capture_demo.cpp  av_capture_demo.cpp
chapter-11/: README.md
chapter-11/src/: audio_processor.cpp
chapter-12/: README.md
chapter-13/: OPTIMIZATION_PLAN.md  README.md
chapter-13/src/: h265_encode_demo.cpp
chapter-14/: OPTIMIZATION_PLAN.md  README.md
chapter-15/: OPTIMIZATION_PLAN.md  README.md
chapter-15/src/: audio_encode_demo.cpp
chapter-16/: OPTIMIZATION_PLAN.md  README.md
chapter-16.5/: README.md
chapter-16.5/src/: udp_client.cpp
chapter-16/src/: filter_demo.cpp
chapter-17/: README.md
chapter-17/src/: CMakeLists.txt  rtp_rtcp.hpp  simple_tcp_client.cpp  udp_server.cpp
chapter-18/: README.md
chapter-19/: README.md
chapter-20/: README.md
chapter-20/src/: webrtc_native_demo.cpp
chapter-21/: README.md
chapter-22/: README.md
chapter-23/: README.md
chapter-24/: README.md
chapter-24/src/: hls_dash_demo.cpp
chapter-25/: README.md
chapter-25/src/: webtransport_client.js  (+1 more)
chapter-26/: README.md
chapter-27/: README.md
chapter-28/: README.md
chapter-29/: README.md
chapter-30/: Dockerfile  README.md  k8s-deployment.yaml
chapter-31/: README.md
docs/: GLOSSARY.html  appendix-a-cpp11-thread.html  chapter-01.html  chapter-02.html  chapter-03.html  chapter-04.html  chapter-05.html  chapter-06.html  chapter-07.html  chapter-08.html  chapter-09.html  chapter-10.html  chapter-11.html  chapter-12.html  chapter-13.html  chapter-14.html  chapter-15.html  chapter-16.html  chapter-17.html  chapter-18.html  chapter-19.html  chapter-20.html  chapter-21.html  chapter-22.html  chapter-23.html  chapter-24.html  chapter-25.html  chapter-26.html  chapter-27.html  chapter-28.html  chapter-29.html  chapter-30.html  chapter-31.html  index.html  project-01.html  project-02.html  project-03.html  project-04.html  project-05.html  project-06.html  (+6 more)
ebook/: live-system-book.epub  live-system-book.md
memory/: 2025-08-19.md  2026-03-24-chapter-code.md  2026-03-24.md
project-01/: CMakeLists.txt  README.md
project-02/: CMakeLists.txt  README.md
project-02/include/live/: network_player.h
project-02/src/: main.cpp  network_player.cpp
project-03/: CMakeLists.txt  README.md
project-04/: README.md
project-05/: README.md
project-06/: CMakeLists.txt  README.md
project-06/config/: stun_servers.json
project-06/include/: common.h
project-06/include/live/: ice_agent.h  stun_client.h  turn_client.h
project-06/src/: ice_agent.cpp  main.cpp  rtp_packet.cpp  rtp_packet.h  stun_client.cpp  turn_client.cpp
project-07/: CMakeLists.txt  README.md
project-07/config/: signaling_config.json
project-07/include/live/: signaling_client.h  webrtc_client.h
project-07/src/: main.cpp  signaling_client.cpp  webrtc_client.cpp
project-08/: CMakeLists.txt  README.md
project-08/config/: sfu_config.yaml
project-08/include/live/: sfu_client.h  video_grid.h
project-08/src/: main.cpp  sfu_client.cpp  video_grid.cpp
project-09/: CMakeLists.txt  README.md
project-09/config/: recorder_config.yaml
project-09/include/live/: hls_generator.h  mcu_recorder.h  playback_server.h
project-09/src/: hls_generator.cpp  main.cpp  mcu_recorder.cpp  playback_server.cpp
project-10/: CMakeLists.txt  README.md
project-10/config/: server_config.yaml
project-10/include/live/: mcu_server.h  sfu_server.h  signaling_server.h
project-10/src/: main.cpp  mcu_server.cpp  sfu_server.cpp  signaling_server.cpp
project-11/: CMakeLists.txt  README.md
src/: OUTLINE.md  README.md  SUMMARY.md  chapter-01.md  chapter-02.md  chapter-03.md  chapter-05.md  chapter-06.md  chapter-11.md  chapter-12.md  chapter-13.md  chapter-15.md  chapter-17.md  chapter-18.md  chapter-20.md  chapter-22.md  chapter-24.md  chapter-25.md  chapter-30.md  project-02.md  project-06.md  project-09.md
(+80 files in other folders)
